route touch ups
